CONFDEV-19389: fix layout alignment/padding "display option"

--- a/confluence-jira-plugin/src/main/resources/jirachart/jirachart.css
+++ b/confluence-jira-plugin/src/main/resources/jirachart/jirachart.css
@@ -30,7 +30,6 @@
 #jira-chart a.jirachart-display-opts-open, #jira-chart a.jirachart-display-opts-close {
     font-size: 14px;
     line-height: 27px;
-    margin-left: 5px
 }
 
 #jira-chart a.jirachart-display-opts-open.disabled {
@@ -107,4 +106,7 @@
 }
 #jira-chart-inputsearch.search-text {
     max-width: 390px;
+}
+#jira-chart-content .jiraChartOption {
+    padding: 8px 15px;
 }
